# src/shared/infra/http/routes/authenticate.routes.ts
@@ -5,6 +5,6 @@ const authenticateRoutes = Router();
 
 const authenticateUserController = new AuthenticateUserController();
 
-authenticateRoutes.post("/", authenticateUserController.handle);
+authenticateRoutes.post("/sessions", authenticateUserController.handle);
 
 export { authenticateRoutes };
